Allow setting extra JVM options.